# SearchMind-API

./: .gitignore  README.md  SEARCHMIND_DESIGN_PROMPT.md  docker-compose.dev.yml  docker-compose.yml  presentation_script_hinglish.md
backend/: .env.example  Dockerfile  alembic.ini  entrypoint.sh  requirements.txt  test_action.py  test_celery.py  test_crawl.py  test_hitl.py  test_search_fix.py  test_vectorize.py  test_vision.py  test_watch.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  database.py  db_migrate.py  http_client.py  main.py  redis_client.py
backend/app/auth/: api_key_auth.py  jwt_auth.py  key_generator.py
backend/app/middleware/: cors.py  rate_limiter.py  usage_tracker.py
backend/app/models/: __init__.py  api_key.py  cached_results.py  coupon.py  search_log.py  usage.py  user.py  watch_task.py
backend/app/routers/: action.py  admin.py  api_keys.py  auth.py  coupons.py  crawl.py  extract.py  research.py  search.py  usage.py  watch.py
backend/app/schemas/: action.py  (+7 more)
e2e_tests/: test_backend.py  test_frontend.py
frontend/admin/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/developer-portal/: index.html  package-lock.json  package.json  tailwind.config.js
mcp-server/: server.py  test_mcp.py
scripts/: test-search.ps1  test-usage.ps1
sdk/: README.md  pyproject.toml  setup.py
sdk/examples/: basic_search.py  langchain_agent.py  langgraph_agent.py
sdk/searchmind/: __init__.py  client.py  exceptions.py  langchain_tool.py  langgraph_tool.py  models.py
(+68 files in other folders)
