[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "searchmind-api"
version = "1.0.0"
description = "Official Python SDK for the SearchMind AI-native search API platform"
readme = "README.md"
authors = [
    { name = "SearchMind Team", email = "support@searchmind.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.23.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
]
